k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ec2-slack-bot
  labels:
    name: ec2-slack-bot
