k8s/04-ingress.yml
# 1) Middleware to allow only office ip
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: ip-whitelist
#   namespace: ec2-slack-bot
# spec:
#   ipAllowList:
#     sourceRange:
#       - 50.203.25.222/32
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec2-slack-bot
  namespace: ec2-slack-bot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - ec2-slack-bot.notaops.com
      secretName: ec2-slack-bot-tls
  rules:
    - host: ec2-slack-bot.notaops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ec2-slack-bot
                port:
                  number: 80
